--- a/src/ru/rsreu/tyart/alienexplorer/res/values/strings_ru_RU.properties
+++ b/src/ru/rsreu/tyart/alienexplorer/res/values/strings_ru_RU.properties
@@ -1,1 +1,16 @@
-test = Проверка.
+game_paused = ИГРА НА ПАУЗЕ
+level = Уровень
+you_win = ВЫ ВЫИГРАЛИ!
+you_lose = ВЫ ПРОИГРАЛИ...
+
+start_a_new_game = Начать новую игру?
+new_game = Новая игра
+close_game = Закрыть игру?
+exit = Выход
+choose_level = Выбор уровня
+resume = Продолжить
+back_to_main_menu = Назад в главное меню
+restart = Начать заново
+next_level = Следующий уровень
+ok = ДА
+cancel = Отмена
